Instalación de módulo Bootstrap para hacer usos de sus grillas -Grids- con el objetivo de agilizar el proceso y tiempo del diseño responsivo -Responsive- solo en algunos casos. Maquetación de Cabecera, Pie y Listado con sus respectivas etiquetas y atributos semánticos para el posicionamiento orgánico -SEO-. Refactorización de variables SCSS con el fin de reusar y escalar con facilidad el diseño de la plataforma. BUG: Pendiente por finalizar menú principal para dispositivos móviles. Creación de modelos -Models- necesarios para el tratamiento de la información mediante objetos.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<main class="content" role="main">
+<main class="container">
   <router-outlet></router-outlet>
-  <app-footer></app-footer>
 </main>
+<app-footer></app-footer>
