--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,57 +1,31 @@
+// Custom
+@import "../../themes/variables.scss";
+
 :host {
   display: block;
+  background: $footer-background-color 0% 0% no-repeat padding-box;
+  padding: 34.5px 0px 34.5px 0px !important;
+  text-align: center;
 
   footer {
-    margin-top: 8px;
-    display: flex;
-    align-items: center;
-    line-height: 20px;
-  }
+    display: block;
 
-  footer a {
-    display: flex;
-    align-items: center;
-  }
+    div {
+      position: relative;
+      display: inline-block;
 
-  .github-star-badge {
-    color: #24292e;
-    display: flex;
-    align-items: center;
-    font-size: 12px;
-    padding: 3px 10px;
-    border: 1px solid rgba(27, 31, 35, 0.2);
-    border-radius: 3px;
-    background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
-    margin-left: 4px;
-    font-weight: 600;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji,
-      Segoe UI Emoji, Segoe UI Symbol;
-  }
+      a {
+        position: absolute;
+        display: inline-block;
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+      }
 
-  .github-star-badge:hover {
-    background-image: linear-gradient(-180deg, #f0f3f6, #e6ebf1 90%);
-    border-color: rgba(27, 31, 35, 0.35);
-    background-position: -0.5em;
-  }
-
-  .github-star-badge .material-icons {
-    height: 16px;
-    width: 16px;
-    margin-right: 4px;
-  }
-
-  svg#clouds {
-    position: fixed;
-    bottom: -160px;
-    left: -230px;
-    z-index: -10;
-    width: 1920px;
-  }
-
-  @media screen and (max-width: 575px) {
-    svg#rocket-smoke {
-      display: none;
-      visibility: hidden;
+      img {
+        height: 81px;
+      }
     }
   }
 }
