--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,33 +1,96 @@
+// Bootstrap
+@import "~bootstrap/scss/_functions";
+@import "~bootstrap/scss/_variables";
+@import "~bootstrap/scss/_mixins";
+
+// Custom
+@import "../../themes/variables.scss";
+
 :host {
+  @import "~bootstrap/scss/utilities/_display";
+
   display: block;
+  background: $header-background-color 0% 0% no-repeat padding-box;
 
-  .spacer {
-    flex: 1;
-  }
+  header {
+    @import "~bootstrap/scss/_navbar";
 
-  .toolbar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    background-color: #1976d2;
-    color: white;
-    font-weight: 600;
-  }
+    nav {
+      padding: 34.5px 0px 34.5px 0px !important;
 
-  .toolbar img {
-    margin: 0 16px;
-  }
+      .navbar-brand {
+        position: relative;
+        margin: 0px;
+        padding: 0px;
 
-  .toolbar #twitter-logo {
-    height: 40px;
-    margin: 0 16px;
-  }
+        a {
+          position: absolute;
+          top: 0px;
+          left: 0px;
+          display: inline-block;
+          z-index: 1;
+          width: 100%;
+          height: 100%;
+          opacity: 0;
+        }
 
-  .toolbar #twitter-logo:hover {
-    opacity: 0.8;
+        img {
+          height: 81px;
+        }
+      }
+
+      .navbar-toggler {
+        color: $primary-color;
+        border-color: $primary-color;
+
+        .navbar-toggler-icon {
+          background-image: escape-svg($navbar-dark-toggler-icon-bg);
+        }
+      }
+
+      .menu-options {
+        &.movile {
+          // display: block;
+          // padding: 34.5px 15px 34.5px 15px !important;
+          // background: $header-background-color 0% 0% no-repeat padding-box;
+          // position: absolute;
+          // top: 0px;
+          // left: 0px;
+          // z-index: 1;
+
+          position: relative;
+          display: block;
+          width: 100%;
+          height: 100%;
+
+          ul {
+            // display: block;
+            background: $header-background-color 0% 0% no-repeat padding-box;
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            z-index: 1;
+            width: 100%;
+            height: 100%;
+
+            li {
+              display: block;
+              margin: 15px 0px 15px 0px;
+              text-align: center;
+            }
+          }
+        }
+
+        ul {
+          display: inline;
+
+          li {
+            display: inline-block;
+            font: DemiBold 20px/24px TT Supermolot Neue;
+            margin: 0px 30px 0px 30px;
+          }
+        }
+      }
+    }
   }
 }
