--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,48 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+// Custom
+@import "./themes/variables.scss";
 
-* {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
-        "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
-    color: #333;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+body {
+    color: $font-color;
+    font-style: $font-size;
+    letter-spacing: $letter-spacing;
 }
 
-html {
-    display: block;
-}
+a {
+    color: $font-color;
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 8px 0;
-}
-
-p {
-    margin: 0;
-}
-
-a,
-a:visited,
-a:hover {
-    color: #1976d2;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #125699;
-}
-
-svg.material-icons {
-    height: 24px;
-    width: auto;
-}
-
-svg.material-icons:not(:last-child) {
-    margin-right: 8px;
+    &:hover,
+    &:active,
+    &.active {
+        color: $font-color;
+        text-decoration: underline !important;
+    }
 }
