Refactorización de servicio -SuperHeroService- con el fin de centralizar todas las busquedas, listado, listado aleatorio haciendo uso de un mismo métódo list() esto permite reducir código y centralización de diferentes comportamientos ya que al final del todo el resultado siempre es un arreglo de superhéroes -SuperHeroModel[]-. Todos los ajustes son ejecutadas en modo producción y con Angular Universal para dejar todo finalizado en el mismo momento.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,7 +24,7 @@
         <button type="button" [id]="movileMenuId" class="navbar-toggler d-sm-block d-md-none">
             <span [id]="movileMenuId" [class.navbar-toggler-icon]="!viewMovileMenu"></span>
         </button>
-        <div class="menu-options d-md-block" [class.movile]="viewMovileMenu" [class.d-none]="!viewMovileMenu">
+        <div class="menu-options d-md-inline-block" [class.movile]="viewMovileMenu" [class.d-none]="!viewMovileMenu">
             <ng-container *ngTemplateOutlet="menuTemplate; context: {menu: menu}">
             </ng-container>
         </div>
