--- a/src/app/superhero/list/list.component.scss
+++ b/src/app/superhero/list/list.component.scss
@@ -1,8 +1,3 @@
-// Bootstrap
-@import "~bootstrap/scss/_functions";
-@import "~bootstrap/scss/_variables";
-@import "~bootstrap/scss/_mixins";
-
 // Custom
 @import "../../../themes/variables.scss";
 
@@ -10,13 +5,17 @@
   display: block;
   margin: 60px 0px 30px 0px;
 
-  @import "~bootstrap/scss/_images";
-  @import "~bootstrap/scss/_card";
-
   .card {
     position: relative;
     padding: 0px;
     margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.25rem;
 
     a {
       position: absolute;
@@ -31,13 +30,17 @@
 
     figure {
       margin: 0px;
+      background-color: $card-background-color;
+      min-height: 300px;
 
-      div {
-        background-color: $car-background-color;
+      img {
         min-height: 300px;
+        max-width: 100%;
+        height: auto;
       }
 
       figcaption {
+        background-color: #fff;
         padding: 31px 10px 0px 10px;
         text-align: center;
         color: $primary-color;
