--- a/src/app/superhero/list/list.component.html
+++ b/src/app/superhero/list/list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-6 col-md-3"
-        *ngFor="let superHeroe of (superHeroes | async); index as index; trackBy: trackByFunction;">
+        *ngFor="let superHeroe of (superHeroes$ | async); index as index; trackBy: trackByFunction;">
         <div class="card">
             <!--
                 Un enlace sole puede contener como valor texto en su etiqueta
