--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,14 @@ body {
     letter-spacing: $letter-spacing;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5 {
+    color: $primary-color;
+}
+
 a {
     color: $font-color;
 
