Integración de etiquetas necesarias para el posicionamiento organico SEO <title>, <meta name='description'>, <meta name='keywords'> tomando los datos descargados de los superhéroes tanto en el listado como en la ficha descriptivo.

--- a/src/app/superhero/detail/detail.component.html
+++ b/src/app/superhero/detail/detail.component.html
@@ -1,7 +1,7 @@
 <ng-template #links let-class="class">
     <div class="links {{class}}">
         <a [routerLink]="['/']" title="IR A LISTADO DE SUPERHÉROES">
-            REGRESAR AL LISTADO DE SUPERHÉROES</a>
+            VIEW ALL SUPERHEROES</a>
     </div>
 </ng-template>
 
