Se implementa cargador sobre el listado y ficha descriptiva del sperhéroe(s) con el fin de informar al usuario mejorando su experiencia de usuario.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div>
         <!--
-            Un enlace sole puede contener como valor texto en su etiqueta
+            Un enlace solo puede contener como valor texto en su etiqueta
             debido a que esto afecto los lectores de pantalla para personas
             con discapacidad siendo penalizado por los diferentes buscadores.
             Para evitar este inconveniente se simula un envoltorio compuesto
