--- a/src/themes/variables.scss
+++ b/src/themes/variables.scss
@@ -5,4 +5,6 @@ $header-background-color: #f8f8f8;
 $footer-background-color: $header-background-color;
 $card-background-color: $header-background-color;
 $primary-color: #0044a6;
+$loader-color: $primary-color;
+$loader--background-color: $header-background-color;
 $navbar-dark-toggler-icon-bg: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'><path stroke='#{$primary-color}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>");
