--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
         <div class="navbar-brand">
             <!--
-                Un enlace sole puede contener como valor texto en su etiqueta
+                Un enlace solo puede contener como valor texto en su etiqueta
                 debido a que esto afecto los lectores de pantalla para personas
                 con discapacidad siendo penalizado por los diferentes buscadores.
                 Para evitar este inconveniente se simula un envoltorio compuesto
