Integración de filtro de busqueda de superhéroe haciendo uso de parámetros de consulta persistentes permitiendo una mejor experiencia al usuario en caso de recargar la página o salir del listado guardando siempre el último filtro aplicado.

--- a/src/app/superhero/detail/detail.component.html
+++ b/src/app/superhero/detail/detail.component.html
@@ -4,7 +4,7 @@
 
 <ng-template #links let-class="class">
     <div class="links {{class}}" [hidden]="!(superHero$ | async)">
-        <a [routerLink]="['/']" title="IR A LISTADO DE SUPERHÉROES">
+        <a [routerLink]="['/']" queryParamsHandling="merge" title="IR A LISTADO DE SUPERHÉROES">
             VIEW ALL SUPERHÉROES</a>
     </div>
 </ng-template>
