--- a/src/app/superhero/list/list.component.scss
+++ b/src/app/superhero/list/list.component.scss
@@ -17,7 +17,7 @@
     min-width: 0;
     background-color: #fff;
     background-clip: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.125);
+    border: 1px solid $card-border-color;
     border-radius: 0.25rem;
 
     a {
