--- a/src/themes/variables.scss
+++ b/src/themes/variables.scss
@@ -4,6 +4,9 @@ $letter-spacing: 0px;
 $header-background-color: #f8f8f8;
 $footer-background-color: $header-background-color;
 $card-background-color: $header-background-color;
+$card-border-color: #707070;
+$input-border-color: $card-border-color;
+$input-shadow-color: #00000029;
 $primary-color: #0044a6;
 $loader-color: $primary-color;
 $loader--background-color: $header-background-color;
