Se solventa BUG de enlace sobre el logo de la cabecera -Header-

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -10,6 +10,7 @@
       padding: 34.5px 0px 34.5px 0px !important;
 
       .navbar-brand {
+        position: relative;
         display: block;
         margin: 0px;
         padding: 0px;
